; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_agraph.c_sdb_set_enc.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_agraph.c_sdb_set_enc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*, i8*, i32)* @sdb_set_enc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sdb_set_enc(i32* %0, i8* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load i8*, i8** %7, align 8
  %11 = call i8* @sdb_encode(i8* %10, i32 -1)
  store i8* %11, i8** %9, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = load i8*, i8** %6, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = load i32, i32* %8, align 4
  %16 = call i32 @sdb_set(i32* %12, i8* %13, i8* %14, i32 %15)
  %17 = load i8*, i8** %9, align 8
  %18 = call i32 @free(i8* %17)
  ret void
}

declare dso_local i8* @sdb_encode(i8*, i32) #1

declare dso_local i32 @sdb_set(i32*, i8*, i8*, i32) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
